*Empty MediaWiki Message*

--- a/रोगशास्त्र.mw
+++ b/रोगशास्त्र.mw
@@ -1,3 +1,4 @@
+[[पटिमा:ZEN_browser_for_Virtual_Microscopy_(9318136341).jpg|right|thumb|282x282px|<center>{{PAGENAME}}</center>]]
 
 == अभिञ्ञाणा ==
 <references />
