--- a/सौराष्ट्र_राज्य_संमन्त्रणाधिवेश.mw
+++ b/सौराष्ट्र_राज्य_संमन्त्रणाधिवेश.mw
@@ -1,1 +1,79 @@
-'''सौराष्ट्र राज्य संमन्त्रणाधिवेश''' एक विन्यास अत्थि, आयाचना स्वक्षत्र सोरठ राज्जं।
+{{Infobox organization
+| name                = सौराष्ट्र राज्य संमन्त्रणाधिवेश
+| native_name         = सौराष्ट्र राज्य संमन्त्रणाधिवेश
+| native_name_lang    = Sanskrit
+| named_after         = 
+| image               = 
+| image_size          = 
+| alt                 = 
+| caption             =
+| logo                = SauRajSam SVG.svg
+| logo_size           = 
+| logo_alt            = 
+| logo_caption        = विक्रान्त चिह्न
+| map                 = 
+| map_size            = 
+| map_alt             = 
+| map_caption         = 
+| map2                = 
+| map2_size           = 
+| map2_alt            = 
+| map2_caption        = 
+| abbreviation        = 
+| motto               = श्रीराष्ट्र, सुराष्ट्र, सौराष्ट्र
+| predecessor         = 
+| merged              = 
+| successor           = 
+| formation           = {{start date and age|2019|02|07}}
+| founder             = अर्जुन सिंह जाडेजा
+| founding_location   = [[मकाजी मेघपर]]
+| extinction          = {{end date and age|2019|02|07}}
+| merger              = 
+| type                = 
+| tax_id              = <!-- or | vat_id = (for European organizations) -->
+| registration_id     = <!-- for non-profit org -->
+| status              = 
+| purpose             = भारतिय संघ न्ना सौराष्ट्र स्स राज्यपद 
+| headquarters        = 
+| location            = 
+| coords              = <!-- {{coord|LAT|LON|display=inline, title}} -->
+| region              = सौराष्ट्र
+| services            = 
+| products            = 
+| methods             = 
+| fields              = 
+| membership          = 
+| membership_year     = 
+| language            = [[संस्कृत]], [[गुजराती]], [[हिन्दी]]
+| owner               = 
+| sec_gen             = अर्जुन सिंह जाडेजा
+| leader_title        = 
+| leader_name         = 
+| board_of_directors  = 
+| key_people          = 
+| main_organ          = 
+| parent_organization = 
+| subsidiaries        = 
+| secessions          = 
+| affiliations        = 
+| budget              = 
+| budget_year         = 
+| revenue             = 
+| revenue_year        = 
+| disbursements       = 
+| expenses            = 
+| expenses_year       = 
+| endowment           = 
+| staff               = 
+| staff_year          = 
+| volunteers          = 
+| volunteers_year     = 
+| slogan              = उद्दिश्यिन् स्वक्षत्र सौराष्ट्र
+| mission             = 
+| website             = 
+| remarks             = 
+| formerly            = 
+| footnotes           = 
+}}
+
+'''सौराष्ट्र राज्य संमन्त्रणाधिवेश''' कं अपंजिकृत संघटन स्ह, ए रि [[भारत]]न्ना गुजरात राज्यस्स सौराष्ट्र प्रदेशस्स अलग करमः स्वक्षत्र '''सौराष्ट्र''' राज्यस्स निर्माण क्को अभियान चालनवा।
