--- a/सौराष्ट्र_राज्य_संमन्त्रणाधिवेश.mw
+++ b/सौराष्ट्र_राज्य_संमन्त्रणाधिवेश.mw
@@ -77,3 +77,5 @@
 }}
 
 '''सौराष्ट्र राज्य संमन्त्रणाधिवेश''' कं अपंजिकृत संघटन स्ह, ए रि [[भारत]]न्ना गुजरात राज्यस्स सौराष्ट्र प्रदेशस्स अलग करमः स्वक्षत्र '''सौराष्ट्र''' राज्यस्स निर्माण क्को अभियान चालनवा।
+
+[[File:SauRajSam Color.jpg|thumb|'''''विक्रान्त चिह्न''''', रक्तध्वज धारणकत्ता सिंह इ संगठनस्स प्रतिक स्ह।]]
