--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -1,3 +1,12 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''नार्वे'''</big></big><br />Kongeriket Norge<br />Kongeriket Noreg<br />Norgga gonagasriika
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+
+|}
+|}
+
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
 
 == अभिञ्ञाणा ==
