--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -3,6 +3,8 @@
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="150px" | [[File:Flag of Norway.svg|160px]]
 
 |}
 |}
