--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -6,8 +6,10 @@
 |-
 | align="center" width="150px" | [[File:Flag of Norway.svg|160px]]
 | align="center" width="130px" | [[File:Coat of arms of Norway.svg|70px]]
-
 |}
+|-
+| align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''
+
 |}
 
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
