--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -8,7 +8,7 @@
 | align="center" width="130px" | [[File:Coat of arms of Norway.svg|70px]]
 |}
 |-
-| align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''
+| align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''<br /><center>[[File:Norway (National Anthem).ogg]]</center>
 
 |}
 
