--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -9,6 +9,8 @@
 |}
 |-
 | align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''<br /><center>[[File:Norway (National Anthem).ogg]]</center>
+|-
+| align=center colspan=2 | [[File:Europe-Norway.svg|300px]]
 
 |}
 
