--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -13,6 +13,9 @@
 | align=center colspan=2 | [[File:Europe-Norway.svg|300px]]
 |-
 | align=center colspan=2 | [[File:Norway on the globe (Europe centered).svg|300px]]
+|-
+| Population estimate 
+| 5 328 212
 
 |}
 
