--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -15,7 +15,7 @@
 | align=center colspan=2 | [[File:Norway on the globe (Europe centered).svg|300px]]
 |-
 | Population estimate<br />Population density
-| 5 328 212<ref>[https://www.ssb.no/en/befolkning/statistikker/folkemengde/kvartal Population, january 1 2019, Statistics Norway] Accessdate = 2019-03-24</ref> <small>(2019)</small> (120th)<br />13.8	 / km<sup>2</sup>
+| 5 328 212<ref>[https://www.ssb.no/en/befolkning/statistikker/folkemengde/kvartal Population, january 1 2019, Statistics Norway] Accessdate = 2019-03-24</ref> <small>(2019)</small> (120th)<br />13.8	 / km<sup>2</sup> (213.)
 
 |}
 
