--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -14,8 +14,11 @@
 |-
 | align=center colspan=2 | [[File:Norway on the globe (Europe centered).svg|300px]]
 |-
-| Population estimate<br />Population density
-| 5 328 212<ref>[https://www.ssb.no/en/befolkning/statistikker/folkemengde/kvartal Population, january 1 2019, Statistics Norway] Accessdate = 2019-03-24</ref> <small>(2019)</small> (120th)<br />13.8	 / km<sup>2</sup> (213.)
+| Population estimate 
+| 5 328 212<ref>[https://www.ssb.no/en/befolkning/statistikker/folkemengde/kvartal Population, january 1 2019, Statistics Norway]</ref> <small>(2019)</small> (120th)
+|-
+| Population density 
+| 13.8 / km<sup>2</sup> (213th)
 |-
 | Area 
 | 385 207<ref name="kart_2019">{{Cite web|url=https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/|title=Arealstatistics for Norway 2019|publisher=Kartverket, mapping directory for Norway|year=2019|accessdate=2019-03-20}}</ref> km<sup>2</sup> (67th)<br />Percent water = 5.7%
