--- a/रूस.mw
+++ b/रूस.mw
@@ -1,1 +1,2 @@
+[[File:Russian Federation 2014 (orthographic projection) with Crimea and South Kuriles.svg|thumb]]
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
