--- a/गणितं.mw
+++ b/गणितं.mw
@@ -1,3 +1,4 @@
+{{stub}}
 '''गणितं''' <ref>गणक नाम अस्ति</ref>
 [[पटिमा:maya.svg|thumb|[[मयन अंक]]]]
 
@@ -11,7 +12,5 @@
 <references />
 
 == गन्थवंस ==
-
-{{चिकित्सा}}
 
 [[विभाग:गणितं]]
