--- a/क्श्हतरिय.mw
+++ b/क्श्हतरिय.mw
@@ -1,3 +1,7 @@
 क्श्हतरियते चतवरिणस्स वेदिक वरिणआशरिम अनुसार द्देम् व बोधि ध जयिन वरिणआशरिम अनुसार कंम् वरिण स्ह। आरिय समाजन्ना कश्हतरियस्स सथान राजा, योधि पि रकश्हक सदरुश स्ह। देव शरि राम, किशन, बुध ध महाविर सरिव क्श्हतरिय कुल वंशज अस्ह। वेदिक गरिंथन्ना देवातस्से क्श्हतरिय वरिणित स्ह।
+[[File:StandingBuddha.jpg|thumb|गउतम बुध, शाकिय राजपुत।.<ref>{{Cite web|url=https://www.buddhanet.net/e-learning/buddhism/lifebuddha/1lbud.htm|title=Life of Buddha: Queen Maha Maya's Dream (Part 1)|website=www.buddhanet.net|access-date=2018-10-12}}</ref>]]
 
 क्श्हतरियातस्स चत् मुखिय वंश स्ह ; रविवंश, सोमवंश, हुताशवंश पि नागवंश। वरितमान समयन्ना कश्हतरिय भुमानिय रितते '''राजपुत''' नामते ज्नात वियः। [[जाडेजा]] परिवरितमान पशचिम आरियावरितस्स सरिवउतम राजवंश स्ह।
+
+===संदरिभ==
+{{Reflist}}
