Cleaning and re-writing main page. Fixing all language and grammer probs.

--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -1,31 +1,25 @@
 <br />
 <div style="background-color:#FFFBF0; padding:10px; "> 
 <p style="text-align: center">
-<big>''' पाळिभासा-विकिनिखिलकोसो <br> Pālibhāsā vikinikhilakoso '''</big>
+<big>''' पाळि वाचा विकिनिखिलकोश्ह</big>
 
 </p>
 <p style="text-align: center"> 
-[[Image:Flag of Buddhism.svg|130px|left]]
-[[Image:Wikipedia-logo.png|130px|right]]
+[[Image:Wikipedia-logo.png|150px|right]]
 </p>
-<p style="margin: 0.5em 0 0 3%; text-align: center; 
+<p style="margin: 0.5em 0 0 3%; text-align: left; 
 font-size: 125%; line-height: 1.3">
-''सागतं! एत्थ विकिपीडिया ति निखिलकोसे।'' 
-''इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति।! सहायता एत्थ विज्जति:''''[http://www.saigon.com/~anson/ebud/dict-ep/ आंग्लभासा-पालि]'' 
-''अयं निखिलकोसो आरद्धो फुस्समासे १६, २५४९।'' 
-''एत्थ पन [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]]  लेखा लिखिता होन्ति|'' 
-''अपि च खो सब्बे लेखा आबध्दा भवेतब्बा| (GNU)।'' 
-''अभ्यासत्थाय [[Wikipedia:Help|सहायता]] अथवा  [[Wikipedia:Sandbox|पयोगट्ठले]] गच्छन्तु । हेट्ठा लेखनाय सुविधाय ठलानि सन्ति -'' 
+सुआगतम्! एत् विकिपिडियास्स निखिलकोश्हते।
+इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति! सहायता एत्थ विज्जति:'''[http://www.saigon.com/~anson/ebud/dict-ep/ आंग्लभासा-पालि] 
+अयं निखिलकोसो आरद्धो फुस्समासे १६, २५४९।
+एत्थ पन [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]]  लेखा लिखिता होन्ति|
+अपि च खो सब्बे लेखा आबध्दा भवेतब्बा| (GNU)।
+अभ्यासत्थाय [[Wikipedia:Help|सहायता]] अथवा  [[Wikipedia:Sandbox|पयोगट्ठले]] गच्छन्तु । हेट्ठा लेखनाय सुविधाय ठलानि सन्ति।
 </p>
+
 <p style="margin: 0.5em 0 0 3%; text-align: center; 
 font-size: 125%; line-height: 1.3">
 <center>
-''sāgataṃ! vikikoso (nikhilakoso - āṅgalabhāṣā: Wikipedia).''
-''ayaṃ saddakoso samānakikko hoti, abaddha nikhilakosa karetu. Tuvampi imasmi saddakose vatthūni likheyya! upakāro:''''[http://www.saigon.com/~anson/ebud/dict-ep/ Āṅalabhāṣā-pālī]''
-''ayaṃ nikhilakoso āraddhakato phussamāse 16, 2549.''
-''itiraci [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]] Bhāthuni likhita: honatī.''
-''apī ca kho sabbe bhāthuni ābadhdā bhabetabbā| (GNU).''
-''abhyāsatthāya [[Wikipedia:Help|sahāyatā]]  ca  [[Wikipedia:Sandbox|payogaṭṭhale]] gacchantu . Adhastāt lekhanāya suvidhāya sthalāni santi -''
 </center>
 </p>
 <br>
