--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -9,12 +9,7 @@
 </p>
 <p style="margin: 0.5em 0 0 3%; text-align: left; 
 font-size: 125%; line-height: 1.3">
-सुआगतम्! एत् विकिपिडियास्स निखिलकोश्हते।
-इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति! सहायता एत्थ विज्जति:'''[http://www.saigon.com/~anson/ebud/dict-ep/ आंग्लभासा-पालि] 
-अयं निखिलकोसो आरद्धो फुस्समासे १६, २५४९।
-एत्थ पन [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]]  लेखा लिखिता होन्ति|
-अपि च खो सब्बे लेखा आबध्दा भवेतब्बा| (GNU)।
-अभ्यासत्थाय [[Wikipedia:Help|सहायता]] अथवा  [[Wikipedia:Sandbox|पयोगट्ठले]] गच्छन्तु । हेट्ठा लेखनाय सुविधाय ठलानि सन्ति।
+सुआगतम्! एत् विकिपिडियास्स निखिलकोश्हते। इ कं निःमुल ज्नानकोश्ह स्ह, रिन्ना को'पि संपादन कर मियातः। विकिपीडिया यथासंभव निःपक्श्ह दरुश्हटीकोणन्नी सुचनात परिसारित करक्को करुतसंकलप स्ह। इ विकिपीडियास्स पाळि आवरुति स्ह, आरदधित सन् २५४९ पोश्ह तिथि १६। अहि वनातुर [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]] लेख लीखित स्ह। अभीयासक्को [[Wikipedia:Help|सहायता]] य [[Wikipedia:Sandbox|पयोगट्ठले]] ठलते गचछ।
 </p>
 
 <p style="margin: 0.5em 0 0 3%; text-align: center; 
