--- a/मकाजी_मेघपर.mw
+++ b/मकाजी_मेघपर.mw
@@ -1,7 +1,8 @@
-'''मकाजी मेघपर'''<ref name = Census2011>[http://www.census2011.co.in]</ref><ref name = हरिलाल उपाध्याय>{{cite web|url=http://www.harilalupadhyay.org|title=Online Tribute To The Great Gujarati Author - Late Shri Harilal Upadhyay|first=Jiten|last=Upadhyay|work=harilalupadhyay.org}}</ref> एकस्य सोरठाली ग्राम<ref>{{cite web|title=Gram Panchayat Identification Codes|url=http://saaksharbharat.nic.in/saaksharbharat/forms/gp_code.pdf|website=Saakshar Bharat Mission|accessdate=5 July 2016|page=120|format=PDF}}</ref> अस्तु।
+'''मकाजी मेघपर'''<ref name = Census2011>[http://www.census2011.co.in Census 2011 India]</ref> हालार परांतन्ना सथित कं गाम स्ह। इ गामस्स विसतार २३.४४ वरिग किमि स्ह ध गामन्ना २००० जनस्स संभवित वसन स्ह। गामस्स सथापन विकरिम सन् १८११न्ना राजकंवर मकनजि जाडेजाते कर वियाः।
 
-[[पटिमा:MMp in Falak.jpg|thumb|फलक लिपीमा मकाजी मेघपर]] 
-[[पटिमा:MMeghpar FLAG.jpg|thumb|मकाजी मेघपरस्य ध्वजः]]
+मकाजी मेघपर गाम मूलिका पाठशाळा, बाळकरिडांगण पि दुगधालय सदरुश सेवा धरावत स्ह। मयुरधवज सिंह जाडेजा इ गामस्स सरपंच स्ह।<ref>{{cite web|title=Gram Panchayat Identification Codes|url=http://saaksharbharat.nic.in/saaksharbharat/forms/gp_code.pdf|website=Saakshar Bharat Mission|accessdate=5 July 2016|page=120|format=PDF}}</ref> मेघपर [[जाडेजा]] वंशस्स भुतपूरिव जागिर अस्ह।
 
-==अभिञ्ञाणा==
+[[पटिमा:MMeghpar FLAG.jpg|thumb|मकाजी मेघपरस्स पताकाः]]
+
+==संदरिभ==
 {{reflist}}
