--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -9,13 +9,13 @@
 </p>
 <p style="margin: 0.5em 0 0 3%; text-align: left; 
 font-size: 125%; line-height: 1.3">
-सुआगतम्! एत् विकिपिडियास्स निखिलकोश्हते। इ कं निःमुल ज्नानकोश्ह स्ह, रिन्ना को'पि संपादन कर मियातः। विकिपीडिया यथासंभव निःपक्श्ह दरुश्हटीकोणन्नी सुचनात परिसारित करक्को करुतसंकलप स्ह। इ विकिपीडियास्स पाळि आवरुति स्ह, आरदधित सन् २५४९ पोश्ह तिथि १६। अहि वनातुर [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]] लेख लीखित स्ह। अभीयासक्को [[Wikipedia:Help|सहायता]] य [[Wikipedia:Sandbox|पयोगट्ठले]] ठलते गचछ।
+सुआगतम्! एत् विकिपीडियास्स निखिलकोश्हते। इ कं निःमुल ज्नानकोश्ह स्ह, रिन्ना को'पि संपादन कर मियातः। विकिपीडिया यथासंभव निःपक्श्ह दरुश्हटीकोणन्नी सुचनात परिसारित करक्को करुतसंकलप स्ह। इ विकिपीडियास्स पाळि आवरुति स्ह, आरदधित सन् २५४९ पोश्ह तिथि १६। अहि वनातुर [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]] लेख लीखित स्ह। अभीयासक्को [[Wikipedia:Help|सहायता]] य [[Wikipedia:Sandbox|पयोगट्ठले]] ठलते गचछ।
 </p>
 
 
 <div class="MainPageBG" style="border: 1px solid #bfbfbf; padding: .5em 1em 1em; font-size: 100%; color: #000; background-color: #fff; margin: 3px;">
 
-<h3 id="sister">विकिपिडिया सहपरियोजनातः</h3>
+<h3 id="sister">विकिपीडिया सहपरियोजनातः</h3>
 
 {| align="center" cellpadding="2" width="100%"
 |-  valign="top"
