*Empty MediaWiki Message*

--- a/अहिर.mw
+++ b/अहिर.mw
@@ -1,4 +1,4 @@
-अहिर, ऊदक् [[भारत]]न्ना कं दलित अजपाल जाति स्ह। ई जनपरीजाति मधिय एशियास्स हुण सकनद संध संबंध धरावते स्ह, वेदिक गरिंथान्ना अहिरातस्से अनारिय दरिशावित स्ह। वरितमान समाजन्ना ई जन पशुपालनस्स कारियन्ना जोतरान स्ह।<ref>[https://books.google.co.in/books?id=A7KjiaNPsiMC&pg=PT399&dq=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&hl=en&sa=X&ved=0CCoQ6AEwAjigAWoVChMIpMK2xuucyAIVzxmOCh27-wQG#v=onepage&q=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&f=false Amarkosha-Amarsingh Virachit ( Vishwanath Jha) Sampurna], Pt. Vishwanath Jha, Motilal Banarsidass Publishe, 2007, Page- 254, ISBN- 9788120826205 </ref>
+अहिर, ऊदक् [[भारत]]न्ना कं [[दलित]] अजपाल जाति स्ह। ई जनपरीजाति मधिय एशियास्स हुण सकनद संध संबंध धरावते स्ह, वेदिक गरिंथान्ना अहिरातस्से अनारिय दरिशावित स्ह। वरितमान समाजन्ना ई जन पशुपालनस्स कारियन्ना जोतरान स्ह।<ref>[https://books.google.co.in/books?id=A7KjiaNPsiMC&pg=PT399&dq=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&hl=en&sa=X&ved=0CCoQ6AEwAjigAWoVChMIpMK2xuucyAIVzxmOCh27-wQG#v=onepage&q=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&f=false Amarkosha-Amarsingh Virachit ( Vishwanath Jha) Sampurna], Pt. Vishwanath Jha, Motilal Banarsidass Publishe, 2007, Page- 254, ISBN- 9788120826205 </ref>
 
 ==संदरिभ==
 {{Reflist}}
