*Empty MediaWiki Message*

--- a/दलित.mw
+++ b/दलित.mw
@@ -1,4 +1,4 @@
-'''दलित''' शद्द भारतस्स अनारिय जन होतु पयुत्त आसित्।
+'''दलित''' शबद [[अनारिय]] जनस्से संबोधक्को परियोग होनात।
 
 {{हिन्दू धम्म}}
 {{stub}}
