Reverted to revision 96535 by Hardhrol: न.

--- a/क्श्हतरिय.mw
+++ b/क्श्हतरिय.mw
@@ -1,5 +1,7 @@
 '''क्श्हतरिय''' ([[गिरीवाण वाचा|गिरीवाण]]: क्षत्रिय), चतवरिणस्स वेदिक वरिणआशरिम अनुसार द्देम् व बोधि ध जयिन वरिणआशरिम अनुसार कंम् वरिण स्ह। आरिय समाजन्ना कश्हतरियस्स सथान राजा, योधि पि रकश्हक सदरुश स्ह।<ref>Bujor Avari (2007). ''[https://books.google.com/books?id=Y1e2V_4Um10C&pg=PA74&dq=indo-aryan+society+kshatriya&hl=en&sa=X&ei=eLhWUrnwLfGw4APh24CYAQ&ved=0CGAQ6AEwCTgK#v=onepage&q=indo-aryan%20society%20kshatriya&f=false India: The Ancient Past: A History of the Indian Sub-Continent from c. 7000 BC to AD 1200]'', p. 89</ref> देव शरि राम, किशन, बुध ध महाविर सरिव क्श्हतरिय कुल वंशज अस्ह। वेदिक गरिंथन्ना देवातस्से क्श्हतरिय वरिणित स्ह।
-[[File:StandingBuddha.jpg|thumb|गउतम बुध, शाकिय क्श्हतरिय।.<ref>{{Cite web|url=https://www.buddhanet.net/e-learning/buddhism/lifebuddha/1lbud.htm|title=Life of Buddha: Queen Maha Maya's Dream (Part 1)|website=www.buddhanet.net|access-date=2018-10-12}}</ref>]]
+[[File:StandingBuddha.jpg|thumb|गउतम बुध, शाकिय राजपुत।.<ref>{{Cite web|url=https://www.buddhanet.net/e-learning/buddhism/lifebuddha/1lbud.htm|title=Life of Buddha: Queen Maha Maya's Dream (Part 1)|website=www.buddhanet.net|access-date=2018-10-12}}</ref>]]
+
+क्श्हतरियातस्स चत् मुखिय वंश स्ह ; रविवंश, सोमवंश, हुताशवंश पि नागवंश। वरितमान समयन्ना कश्हतरिय भुमानिय रितते '''राजपुत''' नामते ज्नात वियः। [[जाडेजा]] परिवरितमान पशचिम आरियावरितस्स सरिवउतम राजवंश स्ह।
 
 ==संदरिभ==
 {{Reflist}}
