Undo revision 96540 by [[Special:Contributions/HinduKshatrana|HinduKshatrana]] ([[User talk:HinduKshatrana|talk]])

--- a/गुरीजर.mw
+++ b/गुरीजर.mw
@@ -1,1 +1,1 @@
-गुरीजर, ऊदक् भारतन्ना कं क्षत्रिय ईलव जाति स्ह।
+गुरीजर, ऊदक् भारतन्ना कं [[दलित]] ईलव जाति स्ह। ई जनपरीजाति अवर एशियास्स सिरीअन विठ्ठापित संध संबंध धरावते स्ह। वरितमान समाजन्ना ई जन करूश्हि ध पशुपालनस्स कारियन्ना जोतरान स्ह
