Reverted to revision 96561 by Hardhrol:  l.

--- a/अहिर.mw
+++ b/अहिर.mw
@@ -1,3 +1,4 @@
-अहिर, ऊदक् [[भारत]]न्ना कं क्षत्रिय अजपाल जाति स्ह।<ref name="आहुक">{{पुस्तक सन्दर्भ|last1=Agrawal|first1=Ramnarayan|title=Braja kā rāsa raṅgamc̃a|date=1981|publisher=Neśanala|location=the University of Michigan|url=https://books.google.co.in/books?id=7tAOAAAAIAAJ&q=%E0%A4%86%E0%A4%AD%E0%A5%80%E0%A4%B0+%E0%A4%AF%E0%A4%BE%E0%A4%A6%E0%A4%B5&dq=%E0%A4%86%E0%A4%AD%E0%A5%80%E0%A4%B0+%E0%A4%AF%E0%A4%BE%E0%A4%A6%E0%A4%B5&hl=en&sa=X&ved=0ahUKEwj92tvX05vMAhVEB44KHXOyDAoQ6AEIOTAE|accessdate=19 अप्रैल 2016}}</ref>
+अहिर, ऊदक् [[भारत]]न्ना कं [[दलित]] अजपाल जाति स्ह। ई जनपरीजाति मधिय एशियास्स हुण सकनद संध संबंध धरावते स्ह, वेदिक गरिंथान्ना अहिरातस्से [[अनारिय]] दरिशावित स्ह। वरितमान समाजन्ना ई जन पशुपालनस्स कारियन्ना जोतरान स्ह।<ref>[https://books.google.co.in/books?id=A7KjiaNPsiMC&pg=PT399&dq=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&hl=en&sa=X&ved=0CCoQ6AEwAjigAWoVChMIpMK2xuucyAIVzxmOCh27-wQG#v=onepage&q=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0&f=false Amarkosha-Amarsingh Virachit ( Vishwanath Jha) Sampurna], Pt. Vishwanath Jha, Motilal Banarsidass Publishe, 2007, Page- 254, ISBN- 9788120826205 </ref>
 
-{{आहुक वंशात समुद्भूता आभीरा इति प्रकीर्तिता। (शक्ति संगम तंत्र, पृष्ठ 164)<ref> [https://books.google.co.in/books?id=N2K7AAAAIAAJ&q=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0+%E0%A4%AE%E0%A4%A7%E0%A5%8D%E0%A4%AF+%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%A6%E0%A5%87%E0%A4%B6&dq=%E0%A4%85%E0%A4%B9%E0%A5%80%E0%A4%B0+%E0%A4%AE%E0%A4%A7%E0%A5%8D%E0%A4%AF+%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%A6%E0%A5%87%E0%A4%B6&hl=en&sa=X&ved=0CCAQ6AEwAThGahUKEwjpvMuE9pbIAhXNGo4KHRGeBEo भाषा भूगोल व सांस्कृतिक चेतना], Vijaya Candra Publisher	Vidyā Prakāśana, 1996 Original from the University of California, पृष्ठ 28,29,30 </ref>}}
+==संदरिभ==
+{{Reflist}}
