*Empty MediaWiki Message*

--- a/महाभारत.mw
+++ b/महाभारत.mw
@@ -1,3 +1,19 @@
 [[File:Krishna and Arjun on the chariot, Mahabharata, 18th-19th century, India.jpg|thumb|महाभारत]]
 {{हिन्दू धम्म}}
 {{stub}}
+'''महाभारतम्'''(आङ्ग्लभाषा Mahabharata) महर्षिणा [[वेदव्यासः|वेदव्यासेन]] विरचितः बहुप्रसिद्धः इतिहासः विद्यते। अस्मिन् ग्रन्थे [[कौरवाः|कौरव]]-[[पाण्डवाः|पाण्डवानां]] महायुद्धं मुख्य-विषयरूपेण वर्णितमस्ति। मानवजीवनस्य [[धर्मः|धर्म]]-[[अर्थः|अर्थ]]-[[कामः|काम]]-[[मोक्षः|मोक्ष]]-रूपाः [[पुरुषार्थः|समस्तपुरुषार्थाः]] अत्र विशालग्रन्थे सन्निवेशिताः। अस्य [[महाभारतम्| महाभारतस्य]] भीष्मपर्वणि [[भगवद्गीता|श्रीमद्‌भगवद्‌गीता]] विद्यते। भगवता [[कृष्णः|कृष्णेन]] मोहग्रस्तम् [[अर्जुनः|अर्जुनं]] प्रति [[ज्ञानम्|ज्ञान]]-[[कर्मवादः|कर्म]]-[[भक्तिः|भक्ति]]-विषयकः उपदेशः गीतायां प्रदत्तः। अस्यां गीतायामपि अष्टादश अध्यायाः सन्ति। मानव-जीवनस्य विविधविषयाः अत्र समीचीनतया प्रतिपादिताः सन्ति। इयं विश्वजनीन-कृतिः कालजयिनी चिरन्तनी एव। 
+==महाभारतस्य रचनाकालः नामकरणञ्च==
+महाभारतग्रन्थः त्रिभिः सवंत्सरैः विरचितं च -
+:त्रिभिर्वर्षैः सदोत्थाय कृष्णद्वैपायनो मुनिः।
+:महाभारतमाख्यानं कृतवानिदमद्भुतम्॥
+इदं प्रायः सर्वे भारतीया विद्वांसो मन्यन्ते यत् महाभारतं प्राग् जयनाम्ना ततो भारतनाम्ना ततः  परतश्च महाभारतनाम्ना प्रसिद्धम् । सूक्ष्मेक्षिकयाऽवलोकनेन ज्ञायते यत् - महाभारतस्य प्रगते चरणत्रयं विद्यते। -
+:प्रथमे चरणे - जयनामकं काव्यमेतत् ८८०० श्लोकपरिमितं व्यासकृतं धर्मचर्चाम् आश्रित्य महर्षि व्यासेन स्वशिष्याय वैशम्पायनाय श्रावितमभूत्।
+:'''नारायणं नमस्कृत्य नरं चैव नरोत्तमम्।'''
+:'''देवीं सरस्वतीं चैव ततो जयमुदीरयेत्।।'''
+प्रत्येकस्य अध्यायस्य आदौ विद्यमानः अयं प्रसिद्धः श्लोकः इदं निरूपयति ।
+:द्वितीये चरणे - भारतनामकं महाकाव्यमेतत् वैशम्पायनकृतं २४ सहस्रश्लोकपरिमितं (चतुर्विंशतिसाहस्री) वैशम्पायनेन अर्जुनस्य प्रपौत्राय जनमेजयाय नागयज्ञे श्रावितमभूत्।
+:तृतीये चरणे - महाभारतनामकं महाकव्यमेतत् लोमहर्षपुत्रेण सौतिकेन रचितं - एकलक्षश्लोकपरिमितं नैमिषारण्ये यज्ञकाले शौनकादिभ्यः ऋषिभ्यः श्रावितमभूत्। एवञ्च आख्यानमिदं त्रिभिर्वक्तृभिः महर्षिभिः विभिन्नश्रोतृभ्यः श्रावितम्।
+महाभारतस्य अन्ते विद्यमानेन श्लोकेन इदं प्रमाणितं भवति -
+:'''उक्तं शतसहस्राणां श्लोकानामिदमुत्तमम्।'''<br />
+अस्य ग्रन्थस्य नूतनतमस्य रूपस्य नाम '''शतसाहस्री''' संहिता अपि अस्ति।
+[[File:Krishna as Envoy.jpg|thumb|'''श्रीकृष्णदौत्यम्''']]
