--- a/आर्मीनिया.mw
+++ b/आर्मीनिया.mw
@@ -1,1 +1,9 @@
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
+<br><gallery caption="आर्मीनिया">
+Yerevan-Republic Square-02-Museum-2019-gje.jpg|Yerevan
+Haghartsin-24-Muttergotteskirche-2019-gje.jpg|Haghartsin
+Zvartnots-30-2019-gje.jpg|Zvartnots
+Khor Virap-Muttergotteskirche-06-2019-gje.jpg|Khor Virap
+Etchmiadzin-14-Moenchswohnungen-2019-gje.jpg|Etchmiadzin
+Etchmiadzin-44-Kreuzstein-2019-gje.jpg|Khatchkar
+</gallery>
