Replacing Laserbehandling..jpg with [[File:Laserbehandling.jpg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR6|Criterion 6]] (maintenance or bug fix) · Double-period before the file extension, appears

--- a/रिउम्याटोलोजी.mw
+++ b/रिउम्याटोलोजी.mw
@@ -1,4 +1,4 @@
-[[पटिमा:Laserbehandling..jpg|right|thumb|320x320px]]
+[[पटिमा:Laserbehandling.jpg|right|thumb|320x320px]]
 
 == अभिञ्ञाणा ==
 <references />
