--- a/अर्जन्टीना.mw
+++ b/अर्जन्टीना.mw
@@ -1,1 +1,4 @@
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
+[[File:Flag_of_Argentina.svg|thumb|]]
+[[File:Argentina_orthographic.svg|thumb|]]
+[[File:ViñedoCafayate.jpg|thumb|]]
