--- a/Bhikkhunipatimokkha.mw
+++ b/Bhikkhunipatimokkha.mw
@@ -1,9 +1,13 @@
 
 
 ==Pubbakaraṇaṃ==
+==पुब्बाकरणम्==
 
 Sammajjanī padīpo ca, udakaṃ āsanena ca;
 Uposathassa etāni, ‘‘pubbakaraṇa’’nti vuccati.
+
+सम्माज्जानी पदिपो का, उदकम् आसनेन का;
+उपोसथास्सा एतानि, "पुब्बाकरणम्" नति वुक्कति।
 
 ==Pubbakiccaṃ==
 
