--- a/Bhikkhunipatimokkha.mw
+++ b/Bhikkhunipatimokkha.mw
@@ -10,9 +10,13 @@ Uposathassa etāni, ‘‘pubbakaraṇa’’nti vuccati.
 उपोसथास्सा एतानि, "पुब्बाकरणम्" नति वुक्कति।
 
 ==Pubbakiccaṃ==
+==पुब्बाकिक्कम्==
 
 Chanda, pārisuddhi, utukkhānaṃ, bhikkhunigaṇanā ca ovādo;
 Uposathassa etāni, ‘‘pubbakicca’’nti vuccati.
+
+चंदा, पारिसुद्धि, उतुक्खानम्, भिक्खुनिगणना का ओवादो;
+उपोसथास्सा एतानि, "पुब्बाकिक्का" नति वुक्कति।
 
 ==Pattakallaaṅgā==
 
