*Empty MediaWiki Message*

--- a/धम्म.mw
+++ b/धम्म.mw
@@ -1,3 +1,5 @@
+[[File:Religionsmajoritaries.png|thumb|380px|]]
+[[File:Religious syms.svg|thumb|]]
 * [[बुद्धो धम्म]]
 * [[हिन्दू धम्म]]
 * [[इस्लाम धम्म]]
