--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -21,7 +21,7 @@
 | 13.9 / km<sup>2</sup> (213th)
 |-
 | Area 
-| 385 207<ref name="kart_2019">{{Cite web|url=https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/|title=Arealstatistics for Norway 2019|publisher=Kartverket, mapping directory for Norway|year=2019|accessdate=2019-03-24}}</ref> km<sup>2</sup> (67th)<br />Percent water = 5.7%
+| 385 207<ref name="kart">{{Cite web|url=https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/|title=Arealstatistics for Norway 2020|publisher=Kartverket, mapping directory for Norway|year=2019|date=2019-12-20|accessdate=2020-03-09|language=no}}</ref> km<sup>2</sup> (67th)<br />Percent water = 5.7%
 
 |}
 
