--- a/आस्ट्रिया.mw
+++ b/आस्ट्रिया.mw
@@ -1,1 +1,5 @@
+[[File:Austria Bundesadler.svg|right|250px]]
+[[File:Flag of Austria.svg|right|250px]]
+[[File:Location Austria EU Europe.png|thumb]]
+[[File:Wien-vom Oberen Belvedere-118-2009-gje.jpg|thumb|Vienna]]
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
