Undo revision 96691 by [[Special:Contributions/HinduKshatrana|HinduKshatrana]] ([[User talk:HinduKshatrana|talk]])

--- a/जाडेजा.mw
+++ b/जाडेजा.mw
@@ -1,1 +1,1 @@
-'''जाडेजा''' एको जाति अस्तु।
+'''जाडेजा''' वृष्णी कुलज एकं राजपुत राजवंसम् अस्त। ते शासित पच्छमस्य कच्छ स सोरठस्य [[नवानगर राज्य|नवानगर]], [[ध्रोल रज्जं|ध्रोल]], राजकोट, गोंडळ, मोरबी एवं [[मकाजी मेघपर]] राज्यम्।
