--- a/फर्मियम.mw
+++ b/फर्मियम.mw
@@ -1,4 +1,5 @@
-'''{{PAGENAME}}''' एकस्य तत्त्व अस्तु।
+[[File:Fermium shells.svg|thumb|right|फर्मियम आण्विय अनुदश्श]]
+'''फर्मियम''' एकम् तत्त्वस्ति।
 {{तत्त्व}}
 
 [[Category:तत्त्व]]
