/* Paripaalaka Anurodh */ oppose

--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -101,3 +101,4 @@ PS: Are you seeing interface messages that are not in this wiki's language? Plea
 
 ==Paripaalaka Anurodh==
 Piyyajana, Mh im anurodhti paripaalaka adhikara [https://meta.wikimedia.org/wiki/Steward_requests/Permissions#vikrantaditya_%40_pi.wikipedia], in samdesh thanik ghosnayam avsyaya purna karoti, stutiyam. [[User:Vikrantaditya|Vikrantaditya]] ([[User talk:Vikrantaditya|वार्ता]]) ०४:१८, ८ जून २०२० (UTC)
+: '''Oppose'''. This user just started editing, and aspires for adminship? --[[User:Martin Urbanec|Martin Urbanec]] ([[User talk:Martin Urbanec|वार्ता]]) १६:४८, ८ जून २०२० (UTC)
