--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -103,3 +103,4 @@ PS: Are you seeing interface messages that are not in this wiki's language? Plea
 Piyyajana, Mh im anurodhti paripaalaka adhikara [https://meta.wikimedia.org/wiki/Steward_requests/Permissions#vikrantaditya_%40_pi.wikipedia], in samdesh thanik ghosnayam avsyaya purna karoti, stutiyam. [[User:Vikrantaditya|Vikrantaditya]] ([[User talk:Vikrantaditya|वार्ता]]) ०४:१८, ८ जून २०२० (UTC)
 : '''Oppose'''. This user just started editing, and aspires for adminship? --[[User:Martin Urbanec|Martin Urbanec]] ([[User talk:Martin Urbanec|वार्ता]]) १६:४८, ८ जून २०२० (UTC)
 : '''Support'''. Administrator is needed, Pali is constantly targeted. [[User:Diggy.raja|Diggy.raja]] ([[User talk:Diggy.raja|वार्ता]]) १२:५५, १० जून २०२० (UTC)
+: '''Support'''. पाळिस्य सम्घस्सर विकिपीडियाए नियमन अवश्यायीस्ति अरू पाळि विकिलो एकं परिपाळक अत्यावश्यायीस्ति। मः इम समल्थन एसःत। -- [[User:RJ.MMp|RJ.MMp]] ([[User talk:RJ.MMp|वार्ता]]) ०२:४७, ११ जून २०२० (UTC)
