--- a/१९०.mw
+++ b/१९०.mw
@@ -1,18 +1,6 @@
 '''१९०''' [[ग्रेगोरी कैलंडर]] स्य एकस्य साधारण वर्ष अस्तु।
 
-== घटना ==
-
-=== ज्यानुवरी-मार्च ===
-
-
-=== अप्रिल-जुन ===
-
-
-=== जुलाई-सेप्टेम्बर ===
-
-
-=== अक्टोबर-डिसेम्बर ===
-
+zzzzzzzzzz
 
 == अज्ञात तिथिस्य घटना ==
 
