--- a/नेपाल_भाषा.mw
+++ b/नेपाल_भाषा.mw
@@ -14,7 +14,7 @@
 <tr><td>[[ISO 639]]-1<td>new
 </table>
 
-'''नेपाल भाषा''' [[चीनी-तिब्बती परिवार]]स्‍य एका [[भाषा]] अस्‍ति| [[नेपाल]] भाषा [[देवनागरी]],[[रन्जना]], [[प्रचलित]], [[ब्राह्मि]], [[भूजिँगोल]] आदि लिप्या लिख्यते|
+'''नेपाल भाषा''' [[चीनी-तिब्बती परिवार]]स्‍य एका [[भाषा]] अस्‍ति| [[नेपाल]] भाषा [[देवनागरी]],[[रन्जना]], [[प्रचलित]], [[ब्राह्मि]], [[भूजिँगोल|भूजिँमोल]],क्वेँमोल ,गोलमोल ,  आदि लिप्या लिख्यते|
 
 == [[नेपाल भाषा साहित्यं]] ==
 
