--- a/१९०.mw
+++ b/१९०.mw
@@ -1,6 +1,18 @@
 '''१९०''' [[ग्रेगोरी कैलंडर]] स्य एकस्य साधारण वर्ष अस्तु।
 
-zzzzzzzzzz
+== घटना ==
+
+=== ज्यानुवरी-मार्च ===
+
+
+=== अप्रिल-जुन ===
+
+
+=== जुलाई-सेप्टेम्बर ===
+
+
+=== अक्टोबर-डिसेम्बर ===
+
 
 == अज्ञात तिथिस्य घटना ==
 
