--- a/नेपाल.mw
+++ b/नेपाल.mw
@@ -7,3 +7,15 @@
 
 
 <small>''अर्जुन सिंह जाडेजा लिखित''</small>
+
+<br><gallery class=center caption="नेपाल">
+Kathmandu-Hanuman Dhoka-Nasal Chowk-06-Pancamukhi Hanuman Mandir-2013-gje.jpg|Kathmandu
+Swayambhunath-Menschen-08-Butterlampenbefueller-2013-gje.jpg|Swayambhunath
+Patan-Palastplatz-Garudasaeule-08-2015-gje.jpg|Patan
+Bhaktapur-Palastplatz 04 mit Siddhilakshmi-Cyasilim-Bhupatindramalla-Saeule-Vatsala-Yaksheshvara-gje.jpg|Bhaktapur
+Dingboche to Chhukung-40-Gruen-2007-gje.jpg|Himalaya
+Chhukung to Imja Tse Camp-40-Berge-2007-gje.jpg|Himalaya
+Ulleri-Ghorepani-38-Szene am Bach-2013-gje.jpg|Kaski District
+Mustang-Dhakmar-84-Tuer-2015-gje.jpg|Mustang
+Mustang-Nyiphu-18-2015-gje.jpg|Mustang
+</gallery>
