परांतन्ना सथित कं गाम स्ह। इ गामस्स विसतार २३.४४ वरिग किमि स्ह ध गामन्ना २००० जनस्स संभवित वसन स्ह। गामस्स सथापन विकरिम सन् १८११न्ना राजकंवर मकनजि जाडेजाते कर वियाः।  मकाजी मेघपर गाम मूलिका पाठशाळा, बाळकरिडांगण पि दुगधालय सदरुश सेवा धरावत स्ह। मयुरधवज

--- a/गुरीजर.mw
+++ b/गुरीजर.mw
@@ -1,1 +1,5 @@
 गुरीजर, ऊदक् भारतन्ना कं क्षत्रिय ईलव जाति स्ह।
+
+परांतन्ना सथित कं गाम स्ह। इ गामस्स विसतार २३.४४ वरिग किमि स्ह ध गामन्ना २००० जनस्स संभवित वसन स्ह। गामस्स सथापन विकरिम सन् १८११न्ना राजकंवर मकनजि जाडेजाते कर वियाः।
+
+मकाजी मेघपर गाम मूलिका पाठशाळा, बाळकरिडांगण पि दुगधालय सदरुश सेवा धरावत स्ह। मयुरधवज
