--- a/दविज.mw
+++ b/दविज.mw
@@ -1,1 +1,2 @@
+[[File:(A) Bhumi Puja, yajna.jpg|thumb|Brahmins in white dress performing the Bhumi Puja ritual [[yajna]] around fire]]
 '''दविज''' ([[गिरीवाण वाचा|गिरीवाण]]: ब्राह्मण), भारतिय वरिणाशरिमस्स कं वरीण स्ह। वरिणातन्ना वेदिक गरिंथात अनूसार कंम् ध बोध'पि जयिन गरिंथात अनूसार द्देम् वरिण स्ह। दविज जनस्स मुखिय कारिय मनादिरन्ना पुजा करविन ध [[क्श्हतरिय]]'पि दविज कुमारातस्से ज्नान अरीपित करविन स्ह।
