--- a/पालि_Pāli.mw
+++ b/पालि_Pāli.mw
@@ -1,3 +1,4 @@
+[[File:Burmese Kammavaca Manuscript.jpg|alt=|thumb|350x350px|Burmese Kammavaca manuscript written in Pali in the 'Burmese' script.]]
 पालि पाचीनभारतवस्सस्स एका भासा अत्थि। एसा भारतयोरोपीयपरिवारस्स एका पाकट अत्थि। एसा बोद्ध तिपिटिकस्स भासारूपेनापि पसिद्धा। पालि तु ब्राह्मी परिवारस्स लिपिसु लिखीयति।
 
 == 'पालि' सद्दस्स उप्पत्ति ==
