--- a/नेपाल_भाषा.mw
+++ b/नेपाल_भाषा.mw
@@ -13,6 +13,7 @@
 <tr><th colspan=2 bgcolor=tomato>भाषा कोड
 <tr><td>[[ISO 639]]-1<td>new
 </table>
+[[Image:Nepal lipi inscription 1952.jpg|thumb|200px|Copper plate inscription at [[Swayambhunath]], dated [[Nepal Sambat]] 1072 (1952&nbsp;AD)]]
 
 '''नेपाल भाषा''' [[चीनी-तिब्बती परिवार]]स्‍य एका [[भाषा]] अस्‍ति| [[नेपाल]] भाषा [[देवनागरी]],[[रन्जना]], [[प्रचलित]], [[ब्राह्मि]], [[भूजिँगोल|भूजिँमोल]],क्वेँमोल ,गोलमोल ,  आदि लिप्या लिख्यते|
 
