--- a/जोतीराव_गोविंदराव_फुले.mw
+++ b/जोतीराव_गोविंदराव_फुले.mw
@@ -1,3 +1,4 @@
+[[File:Jyotirao Phule 1977 stamp of India.jpg|thumb|Mahatma Phule on a 1977 stamp of India]]
 महात्मा '''जोतिबा फुले''' (एप्रिल ११, [[१८२७|इ.स.]] [[१८२७]] - नोव्हेंबर २८, [[१८९०|इ.स.]] [[१८९०]]) हे मराठी लेखक, विचारवंत आणि समाजसुधारक होते. त्यांनी सत्यशोधक समाजाची स्थापना केली; शेतकरी आणि बहुजन समाजांच्या समस्यांना केंद्रस्थानी ठेऊन पुरोगामी विचारांची मांडणी केली आणि महाराष्ट्रातील स्त्री शिक्षणाची मुहूर्तमेढ रोवली. 
 {| class="" align="Center" border="1" width="75%"
 
