--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -24,6 +24,9 @@
 | 385 207<ref name="kart">{{Cite web|url=https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/|title=Arealstatistics for Norway 2020|publisher=Kartverket, mapping directory for Norway|year=2019|date=2019-12-20|accessdate=2020-03-09|language=no}}</ref> km<sup>2</sup> (67th)<br />Percent water = 5.7%
 
 |}
+[[File:Det Kongelige Slott 85500 1.jpg|thumb|[[Royal Palace, Oslo|The Royal Palace]] in Oslo.]]
+[[File:Kong Harald og Dronning Sonja - Kino 2012.JPG|thumb|[[Harald V of Norway|King Harald V]] and [[Sonja of Norway|Queen Sonja]] of Norway (reigning since 1991) in 2012.]]
+[[File:Storting Spring 2016.JPG|thumb|''[[Storting building|The Storting]]'' is the [[Parliament of Norway]].]]
 
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
 
