--- a/आनन्दो.mw
+++ b/आनन्दो.mw
@@ -24,6 +24,7 @@
 |teacher = [[Gautama Buddha]]
 }}
 {{buddhism}}
+[[File:MET 60 76.jpg|left|thumb |18th-century Burmese sculpture of Ānanda |alt=Wooden sculpture of monk sitting in a mermaid pose, reclining |upright]]
 
 '''आनन्दो''' नाम गोतमबुद्धस्स पधानसिस्सो।  बुद्धस्स सब्बेसं सिस्सानं आनन्दस्स येव सति (सरणखमता) सब्बसेट्ठा अहु। सुत्तपिटके अधिकानि सुत्तानि आनन्देन येव सकाय सतिया पठमा-संगीतियं बुद्धस्स वचनानि पुनं सरणं कत्वा दत्तानी ति  मञ्ञति। तम्हा येव सो धम्मस्य रक्खको ति मञ्ञति।
 {{DEFAULTSORT:Ananda}}
