*Empty MediaWiki Message*

--- a/८८०.mw
+++ b/८८०.mw
@@ -1,6 +1,7 @@
 '''८८०''' [[ग्रेगोरी कैलंडर]] स्य एकस्य [[अधिवर्ष]] अस्तु।
 
-== घटना ==
+== poiu
+
 
 === ज्यानुवरी-मार्च ===
 
@@ -12,7 +13,6 @@
 
 
 === अक्टोबर-डिसेम्बर ===
-
 
 == अज्ञात तिथिस्य घटना ==
 
