Reverted edits by [[Special:Contributions/2409:4053:69D:71CF:617:57C9:C258:A2D2|2409:4053:69D:71CF:617:57C9:C258:A2D2]] ([[User talk:2409:4053:69D:71CF:617:57C9:C258:A2D2|talk]]) to last revision by [[User:Addbot|Addbot]]

--- a/८८०.mw
+++ b/८८०.mw
@@ -1,7 +1,6 @@
 '''८८०''' [[ग्रेगोरी कैलंडर]] स्य एकस्य [[अधिवर्ष]] अस्तु।
 
-== poiu
-
+== घटना ==
 
 === ज्यानुवरी-मार्च ===
 
@@ -13,6 +12,7 @@
 
 
 === अक्टोबर-डिसेम्बर ===
+
 
 == अज्ञात तिथिस्य घटना ==
 
