--- a/जगद्गुरुरामभद्राचार्यः_Jagadgururāmabhadrācāryaḥ.mw
+++ b/जगद्गुरुरामभद्राचार्यः_Jagadgururāmabhadrācāryaḥ.mw
@@ -1,4 +1,4 @@
-{{Infobox Hindu leader
+{{Featured article}}{{Infobox Hindu leader
 |name=जगद्गुरुरामभद्राचार्यः <br /> Jagadgururāmabhadrācāryaḥ
 |image=Jagadguru Rambhadracharya.jpg
 |image_size=150px 
