*Empty MediaWiki Message*

--- a/बाबासाहेब_आंबेडकर.mw
+++ b/बाबासाहेब_आंबेडकर.mw
@@ -1,2 +1,4 @@
-[[पटिमा:B.R. Ambedkar in 1950.jpg|thumb|282x282px]]
-भीमराव रामजी आंबेडकर भारतेनु महान समाज्सुध्रक |
+[[File:Dr. Bhimrao Ambedkar.jpg|thumb|right|आंबेडकर]]
+[[पटिमा:B.R. Ambedkar in 1950.jpg|thumb|282x282px|बाबासाहेब आंबेडकर]]
+
+'''भीमराव रामजी आंबेडकर''' भारतेनु महान समाज्सुध्रक|
