*Empty MediaWiki Message*

--- a/नरेंद्र_मोदी.mw
+++ b/नरेंद्र_मोदी.mw
@@ -1,4 +1,4 @@
 [[पटिमा:PM_Narendra_Modi.jpg|thumb|right]]
 '''नरेंद्र मोदी''' भारत गणराज्य १४वें प्रधाने मंत्री अस्तु।
 {{पटिरूप:Featured article}}
-[[Catgory:Featured articles]]
+[[विभाग:Featured articles]]
