--- a/भारत.mw
+++ b/भारत.mw
@@ -1,21 +1,26 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''भारत'''</big></big><br/>''India''
+{{Featured article}}
+{| border="1" align="right" cellpadding="4" cellspacing="0" width="300" style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''भारत'''</big></big><br />''India''
 |-
-| style="background:#efefef;" align="center" colspan=2 |
+| colspan="2" style="background:#efefef;" align="center" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[पटिमा:Flag_of India.svg|125px]]
 | align="center" width="140px" | [[पटिमा:Emblem_of India.svg|125px]]
 |-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
+| align="center" width="140px" |राष्ट्रीय ध्वज
+| align="center" width="140px" |राष्ट्रीय प्रतीक
 |}
 |-
-| align="center" colspan=2 | <small></big>
+| colspan="2" align="center" | <small>
 |-
-| align=center colspan=2 | [[पटिमा:India in its region (claimed).svg|300px]]
+| colspan="2" align="center" | [[पटिमा:India in its region (claimed).svg|300px]]
+|-
+|राजधानी
+|[[दिल्ली]]
 |}
 
 '''भारत''' गणराज्य एकस्य दक्खिन एसियाली राष्ट्र अस्तु।
 
 [[विभाग:राष्ट्र]]
+[[विभाग:Featured articles]]
