--- a/Āngalabhāsā.mw
+++ b/Āngalabhāsā.mw
@@ -1,2 +1,2 @@
-[[File:EN English Language Symbol ISO 639-1 IETF Language Tag Icon.svg|thumb|upright|EN ([[ISO 639]]-1)]]
+[[पटिमा:EN English Language Symbol ISO 639-1 IETF Language Tag Icon.svg|thumb|upright|EN ([[ISO 639]]-1)]]
 आंगलभाषा एकस्य ऐंग्लो-जर्मनी भाषा अस्तु।
