--- a/आनन्दो.mw
+++ b/आनन्दो.mw
@@ -24,14 +24,14 @@
 |teacher = [[Gautama Buddha]]
 }}
 {{buddhism}}
-[[File:MET 60 76.jpg|left|thumb |18th-century Burmese sculpture of Ānanda |alt=Wooden sculpture of monk sitting in a mermaid pose, reclining |upright]]
+[[पटिमा:MET 60 76.jpg|left|thumb |18th-century Burmese sculpture of Ānanda |alt=Wooden sculpture of monk sitting in a mermaid pose, reclining |upright]]
 
-'''आनन्दो''' नाम गोतमबुद्धस्स पधानसिस्सो।  बुद्धस्स सब्बेसं सिस्सानं आनन्दस्स येव सति (सरणखमता) सब्बसेट्ठा अहु। सुत्तपिटके अधिकानि सुत्तानि आनन्देन येव सकाय सतिया पठमा-संगीतियं बुद्धस्स वचनानि पुनं सरणं कत्वा दत्तानी ति  मञ्ञति। तम्हा येव सो धम्मस्य रक्खको ति मञ्ञति।
+'''आनन्दो''' नाम गोतमबुद्धस्स पधानसिस्सो। बुद्धस्स सब्बेसं सिस्सानं आनन्दस्स येव सति (सरणखमता) सब्बसेट्ठा अहु। सुत्तपिटके अधिकानि सुत्तानि आनन्देन येव सकाय सतिया पठमा-संगीतियं बुद्धस्स वचनानि पुनं सरणं कत्वा दत्तानी ति मञ्ञति। तम्हा येव सो धम्मस्य रक्खको ति मञ्ञति।
 {{DEFAULTSORT:Ananda}}
-[[Category:Disciples of Gautama Buddha]]
-[[Category:Guatama Buddha family]]
-[[Category:Arahants]]
-[[Category:Zen Patriarchs]]
-[[Category:Sanskrit words and phrases]]
-[[Category:Pāli words and phrases]]
-[[Category:5th-century BC people]]
+[[विभाग:Disciples of Gautama Buddha]]
+[[विभाग:Guatama Buddha family]]
+[[विभाग:Arahants]]
+[[विभाग:Zen Patriarchs]]
+[[विभाग:Sanskrit words and phrases]]
+[[विभाग:Pāli words and phrases]]
+[[विभाग:5th-century BC people]]
