--- a/एदेनावेय्स.mw
+++ b/एदेनावेय्स.mw
@@ -1,5 +1,5 @@
-'''{{PAGENAME}}''' उत्तर आयरलैंडस्य ग्राम अस्तु। 
+'''{{PAGENAME}}''' उत्तर आयरलैंडस्य ग्राम अस्तु।
 
-[[Category:उत्तर आयरलैंडस्य ग्राम]]
-[[Category:ग्राम]]
-[[Category:उत्तर आयरलैंड]]
+[[विभाग:उत्तर आयरलैंडस्य ग्राम]]
+[[विभाग:ग्राम]]
+[[विभाग:उत्तर आयरलैंड]]
