--- a/किल्रा.mw
+++ b/किल्रा.mw
@@ -3,8 +3,6 @@
 == अभिञ्ञाणा ==
 <references />
 
-== गन्थवंस ==
-
-[[Category:उत्तर आयरलैंडस्य ग्राम]]
-[[Category:ग्राम]]
-[[Category:उत्तर आयरलैंड]]
+[[विभाग:उत्तर आयरलैंडस्य ग्राम]]
+[[विभाग:ग्राम]]
+[[विभाग:उत्तर आयरलैंड]]
