--- a/कृष्ण.mw
+++ b/कृष्ण.mw
@@ -1,6 +1,6 @@
-[[File:Sri Mariamman Temple Singapore 2 amk.jpg|thumb]]
+[[पटिमा:Sri Mariamman Temple Singapore 2 amk.jpg|thumb]]
 '''कृष्ण''' [[हिंदू]] धर्मा पूज्य भगवाने विष्नुः ८वेच अवतारका रुपमी अवतरिनु देवताः अस्तु।<ref>http://www.britannica.com/EBchecked/topic/323556/Krishna</ref>
-==संदरिभ==
+== संदरिभ ==
 {{reflist}}
 {{commons|Krishna|कृष्ण}}
 
