--- a/गुजराती.mw
+++ b/गुजराती.mw
@@ -1,3 +1,3 @@
 '''गुजराती''' (ગુજરાતી) भारतवस्सस्स एका भासा अत्थि। एसा भारतयोरोपीयपरिवारस्स एका वाणि अत्थि। गुजराती तु गुजराती लिपिसु लिखीयति। गुजराती भासास्स उप्पतिदेसा गुजरात अत्थि।
 
-[[File:Gujarati Script Sample.svg|thumb|गुजराती लिपिसू लिखितो गुजराती सद्द]]
+[[पटिमा:Gujarati Script Sample.svg|thumb|गुजराती लिपिसू लिखितो गुजराती सद्द]]
