--- a/चीन.mw
+++ b/चीन.mw
@@ -1,8 +1,7 @@
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
 
-[[file:Chinaimg.png|thumb|right]]
-==अभिञ्ञाणा==
+[[पटिमा:Chinaimg.png|thumb|right]]
+== अभिञ्ञाणा ==
 <references />
-
 
 [[et:Hiina#Hiina Rahvavabariik]]
