--- a/दलित.mw
+++ b/दलित.mw
@@ -1,4 +1,4 @@
-[[File:2011 Census Scheduled Caste caste distribution map India by state and union territory.svg|thumb|360px|Scheduled Castes distribution map in India by state and union territory according to the 2011 Census of India.]]
+[[पटिमा:2011 Census Scheduled Caste caste distribution map India by state and union territory.svg|thumb|360px|Scheduled Castes distribution map in India by state and union territory according to the 2011 Census of India.]]
 '''दलित''' शबद [[अनारिय]] जनस्से संबोधक्को परियोग होनात।
 
 {{हिन्दू धम्म}}
