--- a/धम्म.mw
+++ b/धम्म.mw
@@ -1,8 +1,8 @@
-[[File:Religionsmajoritaries.png|thumb|380px|]]
-[[File:Religious syms.svg|thumb|]]
+[[पटिमा:Religionsmajoritaries.png|thumb|380px|]]
+[[पटिमा:Religious syms.svg|thumb|]]
 * [[बुद्धो धम्म]]
 * [[हिन्दू धम्म]]
 * [[इस्लाम धम्म]]
 * [[यहूदी धम्म]]
 
-[[विभाग:धम्म]]
+[[विभाग:धम्म| ]]
