--- a/नार्वे.mw
+++ b/नार्वे.mw
@@ -4,29 +4,29 @@
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="150px" | [[File:Flag of Norway.svg|160px]]
-| align="center" width="130px" | [[File:Coat of arms of Norway.svg|70px]]
+| align="center" width="150px" | [[पटिमा:Flag of Norway.svg|160px]]
+| align="center" width="130px" | [[पटिमा:Coat of arms of Norway.svg|70px]]
 |}
 |-
-| align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''<br /><center>[[File:Norway (National Anthem).ogg]]</center>
+| align="center" colspan=2 |National anthem = ''[[Ja, vi elsker dette landet]]''<br /><center>[[पटिमा:Norway (National Anthem).ogg]]</center>
 |-
-| align=center colspan=2 | [[File:Europe-Norway.svg|300px]]
+| align=center colspan=2 | [[पटिमा:Europe-Norway.svg|300px]]
 |-
-| align=center colspan=2 | [[File:Norway on the globe (Europe centered).svg|300px]]
+| align=center colspan=2 | [[पटिमा:Norway on the globe (Europe centered).svg|300px]]
 |-
-| Population estimate 
+| Population estimate
 | 5 391 369<ref name="ssbf">{{Cite web|url=https://www.ssb.no/en/befolkning/statistikker/folkemengde/aar-per-1-januar|title=Population, 2021-01-01|publisher=Statistics Norway|date=2021-01-01|accessdate=2021-02-23|language=no}}</ref><small>(2021)</small> (120th)
 |-
-| Population density 
+| Population density
 | 14.0 / km<sup>2</sup> (213th)
 |-
-| Area 
+| Area
 | 385 207<ref name="kart">{{Cite web|url=https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/|title=Arealstatistics for Norway 2020|publisher=Kartverket, mapping directory for Norway|year=2019|date=2019-12-20|accessdate=2020-03-09|language=no}}</ref> km<sup>2</sup> (67th)<br />Percent water = 5.7%
 
 |}
-[[File:Det Kongelige Slott 85500 1.jpg|thumb|[[Royal Palace, Oslo|The Royal Palace]] in Oslo.]]
-[[File:Kong Harald og Dronning Sonja - Kino 2012.JPG|thumb|[[Harald V of Norway|King Harald V]] and [[Sonja of Norway|Queen Sonja]] of Norway (reigning since 1991) in 2012.]]
-[[File:Storting Spring 2016.JPG|thumb|''[[Storting building|The Storting]]'' is the [[Parliament of Norway]].]]
+[[पटिमा:Det Kongelige Slott 85500 1.jpg|thumb|[[Royal Palace, Oslo|The Royal Palace]] in Oslo.]]
+[[पटिमा:Kong Harald og Dronning Sonja - Kino 2012.JPG|thumb|[[Harald V of Norway|King Harald V]] and [[Sonja of Norway|Queen Sonja]] of Norway (reigning since 1991) in 2012.]]
+[[पटिमा:Storting Spring 2016.JPG|thumb|''[[Storting building|The Storting]]'' is the [[Parliament of Norway]].]]
 
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
 
