--- a/नेपाल_भाषा.mw
+++ b/नेपाल_भाषा.mw
@@ -13,26 +13,26 @@
 <tr><th colspan=2 bgcolor=tomato>भाषा कोड
 <tr><td>[[ISO 639]]-1<td>new
 </table>
-[[Image:Nepal lipi inscription 1952.jpg|thumb|200px|Copper plate inscription at [[Swayambhunath]], dated [[Nepal Sambat]] 1072 (1952&nbsp;AD)]]
+[[पटिमा:Nepal lipi inscription 1952.jpg|thumb|200px|Copper plate inscription at [[Swayambhunath]], dated [[Nepal Sambat]] 1072 (1952&nbsp;AD)]]
 
-'''नेपाल भाषा''' [[चीनी-तिब्बती परिवार]]स्‍य एका [[भाषा]] अस्‍ति| [[नेपाल]] भाषा [[देवनागरी]],[[रन्जना]], [[प्रचलित]], [[ब्राह्मि]], [[भूजिँगोल|भूजिँमोल]],क्वेँमोल ,गोलमोल ,  आदि लिप्या लिख्यते|
+'''नेपाल भाषा''' [[चीनी-तिब्बती परिवार]]स्‍य एका [[भाषा]] अस्‍ति| [[नेपाल]] भाषा [[देवनागरी]],[[रन्जना]], [[प्रचलित]], [[ब्राह्मि]], [[भूजिँगोल|भूजिँमोल]],क्वेँमोल ,गोलमोल , आदि लिप्या लिख्यते|
 
 == [[नेपाल भाषा साहित्यं]] ==
 
 === लेखका: ===
-*[[जयन्त वर्मा]]
-*[[लुन्तभद्र बज्राचार्य]]
-*[[जय प्रकाश मल्ल]]
-*[[सिद्धिदास महाजु]]
-*[[सिद्धिचरण श्रेष्ठ]]
-*[[शुक्रराज जोशी शास्त्री]]
-*[[चित्तधर "हृदय"]]
-*[[धूस्वां सायमी]]
-*[[बासु पासा]]
+* [[जयन्त वर्मा]]
+* [[लुन्तभद्र बज्राचार्य]]
+* [[जय प्रकाश मल्ल]]
+* [[सिद्धिदास महाजु]]
+* [[सिद्धिचरण श्रेष्ठ]]
+* [[शुक्रराज जोशी शास्त्री]]
+* [[चित्तधर "हृदय"]]
+* [[धूस्वां सायमी]]
+* [[बासु पासा]]
 
 == बाह्य गवाक्षा: ==
-*http://www.jwajalapa.com
-*http://www.layalama.com
-*[http://www.newawiki.org/dhuku Editable Online Nepal Bhasa dictionary]
+* http://www.jwajalapa.com
+* http://www.layalama.com
+* [http://www.newawiki.org/dhuku Editable Online Nepal Bhasa dictionary]
 
-[[Category:भाषा]]
+[[विभाग:भाषा]]
