--- a/फर्मियम.mw
+++ b/फर्मियम.mw
@@ -1,10 +1,8 @@
-[[File:Fermium shells.svg|thumb|right|फर्मियम आण्विय अनुदश्श]]
+[[पटिमा:Fermium shells.svg|thumb|right|फर्मियम आण्विय अनुदश्श]]
 '''फर्मियम''' एकम् तत्त्वस्ति।
 {{तत्त्व}}
-
-[[Category:तत्त्व]]
-
-
 {{stub}}
 
 {{stub}}
+
+[[विभाग:तत्त्व]]
