--- a/फलक_लिपि.mw
+++ b/फलक_लिपि.mw
@@ -1,3 +1,3 @@
-'''फलक लिपिः'''''([[File:Falak script.jpg|52px]])'' एका विस्स लिपि: अस्ति। एत भास्स अबुगिडा प्रकारस्स लिखिसु।
+'''फलक लिपिः'''''([[पटिमा:Falak script.jpg|52px]])'' एका विस्स लिपि: अस्ति। एत भास्स अबुगिडा प्रकारस्स लिखिसु।
 
-[[File:MMp in Falak.jpg|thumb|फलक लिप्या लिखिता:]]
+[[पटिमा:MMp in Falak.jpg|thumb|फलक लिप्या लिखिता:]]
